--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -11,7 +11,7 @@
   font-family: 'Manrope', sans-serif;
 }
 .container {
-  max-width: clamp(16rem, 50%, 64rem);
+  max-width: clamp(16rem, 64rem, 50%);
   margin-left: auto;
   margin-right: auto;
   padding-left: 1rem;
