client table deletes done

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -20,3 +20,22 @@
 .flex {
   display: inline-flex;
 }
+.backdrop {
+  z-index: 990;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.modal-outer {
+  z-index: 991;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: clamp(15rem, 32vw, 20rem);
+  height: clamp(10rem, 16vh, 20vh);
+  background-color: white;
+}
