item crud operations done

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -18,7 +18,7 @@
   --color-font: oklch(0.27 0.0055 286.03);
   --color-font2: oklch(100% 0 0);
 
-  --color-danger: oklch(46.44% 0.1477 24.17);
+  --color-danger: oklch(0.59 0.2363 29.3);
   --color-warning: oklch(75.22% 0.1235 62.47);
   --color-success: oklch(68.1% 0.1708 151.16);
 }
@@ -32,7 +32,7 @@
   --color-font: oklch(0.708 0 0);
   --color-font2: oklch(0.808 0 0);
 
-  --color-danger: oklch(46.44% 0.1477 24.17);
+  --color-danger: oklch(56.44% 0.2677 24.17);
   --color-warning: oklch(75.22% 0.1235 62.47);
   --color-success: oklch(68.1% 0.1708 151.16);
 }
