--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -39,6 +39,8 @@
 
 @theme {
   --font-sans: 'Manrope Variable', sans-serif;
+  --text-mini: 0.725rem;
+  --text-tiny: 0.625rem;
 
   --color-primary: var(--color-primary);
   --color-sec: var(--color-sec);
@@ -64,9 +66,16 @@
     }
   }
   .input {
-    @apply disabled:hover:ring-warn focus:ring-acc hover:ring-acc bg-red-500 focus:ring-2;
+    @apply disabled:hover:ring-warn focus:ring-acc hover:ring-acc focus:ring-2;
     @apply block w-full rounded-md bg-neutral-100 px-2 py-1 text-base font-normal text-neutral-900 ring-1 ring-neutral-400 transition-all duration-150 outline-none placeholder:text-neutral-700 hover:bg-neutral-50 focus:bg-neutral-50 sm:text-sm/6;
 
+    @variant dark {
+      @apply bg-neutral-800 text-neutral-300 ring-neutral-600 placeholder:text-neutral-400 hover:bg-neutral-800 focus:bg-neutral-800 disabled:placeholder:text-neutral-600;
+    }
+  }
+  .input-dropdown {
+    @apply disabled:hover:ring-warn;
+    @apply bg-neutral-100 text-neutral-900 ring-1 ring-neutral-400 transition-all duration-150 outline-none hover:bg-neutral-50;
     @variant dark {
       @apply bg-neutral-800 text-neutral-300 ring-neutral-600 placeholder:text-neutral-400 hover:bg-neutral-800 focus:bg-neutral-800 disabled:placeholder:text-neutral-600;
     }
