--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,8 +1,19 @@
 @import 'tailwindcss';
-
+@import './scrollbar.css';
 @layer base {
   :root {
     /* font-family: 'Manrope Variable', sans-serif; */
+    /* Chrome, Safari, Edge, Opera */
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+
+    /* Firefox */
+    input[type='number'] {
+      -moz-appearance: textfield;
+    }
   }
 }
 
@@ -10,8 +21,11 @@
 @custom-variant light (&:where([data-theme=light], [data-theme=light] *));
 [data-theme='light'] {
   --color-primary: oklch(100% 0 0);
-  --color-sec: oklch(0.69 0.1179 150.16);
-  --color-acc: oklch(0.84 0.146 85.9);
+  /* --color-sec: oklch(0.69 0.1179 150.16); */
+  /* --color-acc: oklch(0.84 0.146 85.9); */
+  --color-sec: oklch(0.86 0.0196 204.83);
+  /* --color-acc: oklch(0.36 0.0389 248.94); */
+  --color-acc: oklch(0.69 0.1179 150.16);
 
   --color-body-el: oklch(100% 0 0);
   --color-brdr: oklch(0.708 0 0);
@@ -66,6 +80,7 @@
     }
   }
   .input {
+    @apply user-invalid:ring-danger;
     @apply disabled:hover:ring-warn focus:ring-acc hover:ring-acc focus:ring-2;
     @apply block w-full rounded-md bg-neutral-100 px-2 py-1 text-base font-normal text-neutral-900 ring-1 ring-neutral-400 transition-all duration-150 outline-none placeholder:text-neutral-700 hover:bg-neutral-50 focus:bg-neutral-50 sm:text-sm/6;
 
